--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,3 +5,174 @@
 
 
 @import 'media';
+
+.header {
+  &__inner{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 0;
+  }
+}
+
+.menu {
+  &__list {
+    display: flex;
+  }
+  &__list-item + .menu__list-item {
+    padding-left: 35px;
+  }
+  &__list-link {
+    color: $title;
+    padding-bottom: 1px;
+    transition: all .3s;
+    @extend %quicksand-400;
+    &:hover {
+      @extend %quicksand-500;
+      color: $accent;
+      border-bottom: 1px solid $accent;
+    }
+  }
+  &__list-link--active {
+    color: $accent;
+    border-bottom: 1px solid $accent;
+    @extend %quicksand-500
+  }
+}
+
+.user-nav {
+  display: flex;
+  &__link{
+    position: relative;
+    
+  }
+  &__link + .user-nav__link {
+    padding-left: 25px;
+  }
+  &__num {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $accent;
+    top: -9px;
+    right: -14px;
+    font-size: 12px;
+    color: white;
+    text-align: center;
+    line-height: 20px;
+  }
+}
+.footer {
+    background-color: $bg;
+}
+.footer__top {
+  display: flex;
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  & h6 {
+    font-size: 22px;
+    line-height: 36px;
+    color: $title;
+}
+&-item {
+  line-height: 36px;
+}
+&-links__link{
+  color: $default;
+  font-size: 16px;
+  // line-height: 36px;
+  margin-bottom: 10px;
+  display: block;
+}
+&-logo {
+  margin-bottom: 46px;
+  display: block;
+}
+&-adress,
+&-email,
+&-phone {
+  display: block;
+  margin-bottom: 10px;
+}
+&-social {
+  display: flex;
+  margin-top: 30px;
+  align-items: center;
+}
+&-social__item + .footer__top-social__item {
+  padding-left: 18px;
+}
+&-social__link {
+  transition: all .3s;
+  path{
+    fill:$default;
+  }
+  &:hover{
+    path {
+      fill: $accent;
+    }
+  } 
+}
+&-contact {
+  max-width: 236px;
+  margin-right: 64px;
+}
+&-nav {
+  max-width: 144px;
+  margin-right: 57px;
+}
+&-acc {
+  max-width: 125px;
+  margin-right: 75px;
+}
+&-account__item {
+  margin-bottom: 10px;
+  display: block;
+}
+&-subscribe {
+  max-width: 470px;
+  line-height: 26px;
+}
+&-title {
+  margin-bottom: 40px;
+}
+&-form {
+  margin-top: 28px;
+}
+&-form__input{
+  background-color: #fff;
+  max-width: 320px;
+  border: none;
+  width: 100%;
+  padding: 15px;
+  box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+  &::placeholder {
+    color: $default;
+    font-size: 16px;
+  }
+}
+&-form__btn{
+border: none;
+text-transform: uppercase;
+background-color: $accent;
+color: #fff;
+padding: 10px 26px;
+font-size: 16px;
+line-height: 36px;
+box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+cursor: pointer;
+}
+}
+.footer__bottom {
+  display: flex;
+  height: 75px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  &-accept__img {
+    margin-left: 25px;
+    display: inline;
+    vertical-align: middle;
+  }
+}
