--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -22,3 +22,14 @@ $bg: #f6f6f6;
   font-family: 'Roboto-Bold', sans-serif;
   font-weight: 700;
 }
+
+%btn {
+    background-color: $accent;
+    text-transform: uppercase;
+    color: #fff;
+    @extend %roboto-400;
+    padding: 12px 26px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+cursor: pointer;
+border: none;
+}
