--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,21 @@ a {
 .main {
   flex-grow: 1;
 }
+
+.title {
+  text-align: center;
+  color: $title;
+  @extend %roboto-700;
+  font-size: 48px;
+  line-height: 65px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.text {
+  color: $default;
+  @extend %quicksand-400;
+  font-size: 16px;
+  line-height: 26px;
+  max-width: 570px;
+}
