product and promo

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -399,3 +399,186 @@
     display: inline-block;
   }
  }
+.product {
+  padding: 105px 0 120px;
+  text-align: center;
+  &__text {
+  }
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 45px 30px;
+    margin-top: 60px;
+  }
+  &__link {
+    text-transform: uppercase;
+    padding: 15px 25px;
+    border: 1px solid $accent;
+    @extend %roboto-400;
+    color: $title;
+    margin-top: 60px;
+    &-box {
+      display: flex;
+      justify-content: center;
+      
+    }
+  }
+  &__text {
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+.product-item {
+  &:hover {
+    .product-item__link-box {
+      transform: translateY(0);
+    }
+  }
+  max-width: 370px;
+  text-align: center;
+  &__img-box{
+    position: relative;
+    height: 370px;
+    overflow: hidden;
+  }
+  &__title {
+    color: $title;
+    @extend %roboto-400;
+    font-size: 22px;
+    margin: 18px 0;
+  }
+  &__price {
+    display: flex;
+  justify-content: center;
+  }
+  &__new-price{
+    color: $title;
+    margin-right: 22px;
+    @extend %roboto-400;
+  }
+  &__old-price{
+    text-decoration: line-through;
+  }
+  &__link-box {
+    transition: all .3s;
+    position: absolute;
+    bottom: 80px;
+    background-color: #fff;
+    left: 0;
+    right: 0;
+    display: inline-block;
+    height: 50px;
+    width: 220px;
+    margin: 0 auto;
+    border-radius: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    transform: translateY(300%);
+  }
+  &__link--line::before,
+  &__link--line::after {
+    content: '';
+    position: absolute;
+    border-left: 1px solid #ececec;
+    height: 30px;
+    width: 1px;
+    top: 10px;
+  }
+  &__link--line::before {
+    left: 75px;
+  }
+  &__link--line::after{
+    right: 75px;
+  }
+  &__link{
+    display: inherit;
+    path {
+      transition: all .3s;
+    }
+  }
+  &__link:hover {
+    path {
+      fill: $accent;
+    }
+  }
+  &__img {
+    object-fit: cover;
+  }
+  &--sale {
+    .product-item__img-box::before {
+      content: 'SALE';
+      @extend %btn;
+      position: absolute;
+      top:25px;
+      left: 25px;
+      line-height: 1;
+    }
+  }
+}
+.star {
+  margin: 30px auto 0;
+}
+.promo {
+  background-image: url(../images/promo/bg-img.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; 
+  padding: 150px 0 160px;
+  height: 500px;
+  &__inner {
+    max-width: 570px;
+    width: 100%;
+    margin-left: auto ;
+  }
+  &__subtitle {
+    color: $accent;
+    text-align: center;
+    font-size: 22px;
+    @extend %quicksand-400;
+    margin-bottom: 26px;
+  }
+  &__clock {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__clock-item {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    span {
+      color: $title;
+      font-size: 48px;
+      @extend %roboto-700;
+      margin-bottom: 10px;
+    }
+  }
+
+  &__link {
+    text-transform: uppercase;
+    color: $title;
+    padding: 15px 25px;
+    border: 1px solid $accent;
+    @extend %roboto-400;
+    &-box {
+      display: flex;
+      justify-content: center;
+      margin-top: 55px;
+    }
+  }
+}
+
+.partners {
+  margin: 75px 0 170px;
+  &__list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  }
+}
