--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -582,3 +582,203 @@
   align-items: center;
   }
 }
+
+.blog {
+  margin-bottom: 220px;
+  &__title {
+    text-align: center;
+    color: $title;
+    font-size: 48px;
+  }
+  &__text {
+    margin: 25px auto 55px;
+    text-align: center;
+  }
+  &__items {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__subtitle {
+    color: $title;
+    font-size: 22px;
+    line-height: 32px;
+    cursor: pointer;
+    @extend %roboto-400;
+    margin: 23px 0;
+  }
+}
+
+.blog__item {
+  max-width: 370px;
+  background-color: #fff;
+  border: 1px solid #ececec;
+  &-box {
+    margin: 30px 40px;
+  }
+  &-info {
+    display: flex;
+    justify-content: space-between;
+  }
+  &-author {
+    position: relative;
+    padding-left:30px ;
+  } 
+  &-date {
+    position: relative;
+  }
+  &-author::after {
+    content: url('../images/blog/admin.svg');
+    position: absolute;
+    left: 1px;
+    top: 2px;
+  }
+  
+  &-date::after {
+    content: url('../images/blog/date.svg');
+    position: absolute;
+    left: -30px;
+    top: 2px;
+  }
+  &-link:hover {
+    color: $accent;
+    path {
+      fill:$accent
+    }
+  }
+}
+ 
+.top {
+  &-container {
+    // background-image: url(../images/top-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 120px 0 130px;
+  }
+}
+.breadcrumbs {
+  display: table  ;
+  justify-content: center;
+  padding-left: 25px;
+  margin: 0 auto;
+  position: relative;
+  &::before{
+    content: '';
+    background-image: url(../images/icons/home_icon.svg);
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    left: 0;
+    top:4px
+  }
+  &__list {
+    display: flex;
+  }
+  &__item {
+    padding-right: 40px;
+    color: #727272;
+    position: relative;
+    &:last-child {
+      color: $accent;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      background-image: url(../images/icons/arrow.svg);
+      height: 10px;
+      width: 9px;
+      right: 15px;
+      top: 10px;
+    }   
+    &:last-child {
+      color: $accent;
+      &::after {
+        display: none;
+      }
+    }
+  }
+  &__link {
+    color: inherit;
+  }
+  
+}
+.modal {
+  padding-top: 100px;
+  max-width: 570px;
+  margin: 0 auto 115px;
+  &__links {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  &__link {
+    font-size: 22px;
+    color: #909090;
+    @extend %roboto-400;
+    margin: 0 30px;
+    text-transform: uppercase;
+  }
+    &__link--active {
+      color: $accent;
+    }
+    &__label {
+      display: block;
+      margin-bottom: 30px;
+    }
+    &__input{
+      margin-top: 4px;
+      display: block;
+      width: 100%;
+      background-color: $bg;
+      border: none;
+      height: 60px;
+      padding: 0 15px;
+    } 
+    &__btn {
+      display: block;
+      background-color: $title;
+      text-transform: uppercase;
+      color: #fff;
+      padding: 14px;
+      border: none;
+      width: 100%;
+      cursor: pointer;
+    }
+    &__lost {
+      margin-top: 12px;
+      color: $accent;
+      display: inline-block;
+    }
+    &__text {
+      margin-bottom: 25px;
+    }
+  }
+  .error404 {
+    padding: 110px 0 120px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__content {
+    max-width: 570px;
+    width: 100%;
+  }
+  &__title {
+    color: #28384f;
+    margin-bottom: 40px;
+    @extend %roboto-700;
+    font-size: 48px;
+  }
+  &__text {
+    margin-bottom: 55px;
+    max-width: 470px;
+  }
+  &__link {
+    background-color: $accent;
+    color: #fff;
+    padding: 14px 35px;
+    @extend %roboto-400;
+    box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
+  }
+}
+
