--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -402,8 +402,6 @@
 .product {
   padding: 105px 0 120px;
   text-align: center;
-  &__text {
-  }
   &__items {
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -782,3 +780,771 @@
   }
 }
 
+.shop{
+	padding: 120px 0 105px;
+	&__inner{
+		display: flex;
+	}
+	&__filters{
+		width: 370px;
+		margin-right: 30px;
+	}
+	&__filter-btn{
+		display: none;
+		
+	}
+}
+.filter-search{
+	&__form{
+		display: flex;
+	}
+	&__input{
+		border: none;
+		background-color: $bg;
+		height: 50px;
+		padding: 0 5px 0 15px;
+		width: 260px;
+	}
+	&__btn{
+		@extend %btn;
+		border: none;
+		height: 50px;
+		width: 50px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+	}
+	&__btn-search{
+		max-width: none;
+	}
+}
+.filter{
+	&__item{
+	padding: 35px 30px 40px;
+	border: 1px solid #ececec;
+	margin-bottom: 40px;
+	}
+	&__title{
+		text-transform: uppercase;
+		color: $title;
+		font-size: 22px;
+		@extend %roboto-400;
+		margin-bottom: 25px;
+	}
+}
+.filter-price{
+	&__label{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding-top: 30px;
+	}
+	&__btn{
+		@extend %btn;
+		border: none;
+		cursor: pointer;
+	}
+}
+
+.irs--flat .irs-line{
+	top: 13px;
+	height: 5px;
+	background-color: #ececec;
+	border-radius: 0;
+}
+.irs--flat .irs-handle{
+	top: 0;
+	width: 30px;
+	background-color: #fff;
+	height: 30px;
+  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+}
+.irs--flat .irs-handle>i:first-child{
+	display: none;
+}
+.irs--flat .irs-bar{
+	top: 13px;
+	height: 5px;
+	background-color: $accent;
+}
+.irs-from, .irs-to, .irs-singe{
+	display: none;
+}
+.irs--flat .irs-min, .irs--flat .irs-max{
+	display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-to, .irs--flat .irs-single {
+	display: none;
+}
+.irs--flat {
+	height: 30px;
+}
+.filter-color{
+	&__label{
+		padding-bottom: 20px;
+		border-bottom: 1px solid #ececec;
+		display: flex;
+		justify-content: space-between;
+		&+&{
+			padding-top: 20px;
+		}
+		&:last-child{
+			border-bottom: none;
+			padding-bottom: 0;
+		}
+	}
+	&__input{
+		@extend %checkbox-hidden;
+		&:checked + .filter-color__checkbox{
+			background-image: url('../images/icons/arrow-check-on.svg');
+			background-repeat: no-repeat;
+			background-position: center;
+			height: 16px;
+			width: 16px;
+		}
+	}
+	&__checkbox{
+		width: 16px;
+		position: absolute;
+		margin-left: -16px;
+		height: 16px;
+		margin-top: 7px;
+	}
+	&__checkbox--blue{
+		background-color: #00aeef;
+	}
+	&__checkbox--red{
+		background-color: #f52574;
+	}
+	&__checkbox--green{
+		background-color: #24d4ac;
+	}
+	&__checkbox--orange{
+		background-color: #ff7e00;
+	}
+	&__checkbox--black{
+		background-color: #000000;
+	}
+	&__checkbox--purple{
+		background-color: #923899;
+	}
+}
+.filter-size{
+	&__input{
+		@extend %checkbox-hidden;
+		&:checked + .filter-size__checkbox{
+			background-image: url('../images/icons/checkmark.svg');
+			border: none;
+			&+.filter-size__text{
+				color: $accent;
+			}
+		}
+	}
+	&__label{
+		padding-left: 35px;
+		margin-bottom: 20px;
+		display: block;
+		cursor: pointer;
+	}
+	&__checkbox{
+		width: 20px;
+		height: 20px;
+		border: 1px solid $default;
+		position: absolute;
+		margin-left: -35px;
+		border-radius: 50%;
+		margin-top: 3px;
+	}
+}
+.filter-category{
+	&__label{
+		margin-bottom: 15px;
+		display: block;
+				cursor: pointer;
+		&:last-child{
+			margin-bottom: 0;
+		}
+	}
+	&__input{
+		@extend %checkbox-hidden;
+		&:checked + .filter-category__checkbox{
+			background-color: $accent;
+			color: #fff;
+		}
+	}
+	&__checkbox{
+		background-color: $bg;
+		color: $title;
+		display: flex;
+		justify-content: space-between;
+		padding: 16px 20px;
+	}
+}
+.filter-popular{
+	&__label{
+		display: inline-block;
+		margin-bottom: 20px;
+		margin-right: 8px;
+		padding: 10px 0;
+		cursor: pointer;
+	}
+	&__name{
+		@extend %checkbox-hidden;
+		&:checked + .filter-popular__checkbox{
+			background-color: $accent;
+			color: #fff;
+			border-color: $accent;
+		}
+	}
+	&__checkbox{
+		background-color: $bg;
+		border: 1px solid $default;
+		padding: 10px 20px;
+	}
+}
+.shop-content{
+	width: 100%;
+	&__filter{
+		border: 1px solid #ececec;
+		padding: 20px 25px 20px 30px;
+		margin-bottom: 40px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	&__inner{
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		border-bottom: 1px solid #ececec;
+		.product-item{
+			margin-bottom: 40px;
+		}
+	}
+	&__filter-buttons{
+		display: flex;
+		align-items: center;
+	}
+	&__filter-btn{
+		outline: none;
+		padding: 0;
+		border: none;
+		background-color: transparent;
+		margin-left: 15px;
+		line-height: 0;
+		cursor: pointer;
+		&.shop-content__filter-btn--active{
+			path{
+				fill: $accent;
+			}
+		}
+	}
+	.jq-selectbox__select {
+	 height: 32px;
+	 margin-left: 30px;
+    padding-right: 30px;
+    border: none;
+    background: transparent;
+    box-shadow: none;
+    @extend %quicksand-500;
+    color: $default;
+	 text-shadow: none;
+	 &:hover{
+		 background-color: transparent;
+	 }
+	 .jq-selectbox__trigger {
+		 border-left: none;
+		 .jq-selectbox__trigger-arrow {
+   		 position: absolute;
+   		 top: 14px;
+   		 right: 12px;
+   		 width: 10px;
+   		 height: 5px;
+   		 border: none;
+			 background-image: url('../images/icons/angle-down.svg');
+			}
+	 }
+}
+}
+.product-page{
+	padding: 120px 0 0px;
+	.product-one{
+		&__inner{
+			display: flex;
+		}
+		&__slide{
+			width: 730px;
+			margin-right: 70px;
+		}
+		&__content{
+			width: 370px;
+		}
+		&__title{
+			@extend %roboto-700;
+			color: $title;
+			margin-bottom: 20px;
+			font-size: 22px;
+		}
+		&__box{
+			display: flex;
+			margin-bottom: 25px;
+			justify-content: space-between;
+		}
+		&__price{
+			display: flex;
+			font-size: 18px;
+		}
+		&__price-new{
+			color: $title;
+		}
+		&__price-old{
+			padding-left: 15px;
+			text-decoration: line-through;
+		}
+		&__star{
+			display: flex;
+			align-items: center;
+			.star{
+				margin-top: 0;
+			}
+			span{
+				padding-left: 8px;
+				color: $title;
+				font-size: 22px;
+			}
+		}
+		&__item-text{
+			margin-bottom: 30px;
+			color: $title;
+			@extend %roboto-400;
+			font-size: 18px;
+			span{
+				display: block;
+			}
+		}
+		&__item-btn{
+		@extend %btn;
+		border: none;
+		margin-left: 15px;
+		cursor: pointer;
+	}
+	}
+}
+.jq-number__field {
+	 border: 1px solid #f0f0f0;
+	 box-shadow: none;
+	 transform: translateY(1px);
+	 width: 114px;
+}
+.jq-number__field input {
+    border: none;
+    outline: none;
+    background: none;
+	 @extend %quicksand-500;
+	 text-align: center;
+	 color: $title;
+	 height: 50px;
+	 width: 100%;
+}
+.jq-number{
+	padding: 0;
+	position: relative;
+}
+
+.jq-number__spin {
+    position: absolute;
+}
+.jq-number__spin {
+	 position: absolute;
+	 width: 12px;
+	 height: 12px;
+	 cursor: pointer;
+	 top: 50%;
+	 transform: translateY(-50%);
+	 &.minus{
+		left: 15px;
+	 }
+	 &.plus{
+		right: 15px;
+	 }
+	 &::before{
+		 content: '';
+		 position: absolute;
+		 top: 6px;
+		 background-color: $title;
+		 width: 12px;
+		 left: 0;
+		 height: 1px;
+	 }
+	 &.plus::after{
+		 		 content: '';
+		 position: absolute;
+		 top: 0px;
+		 background-color: $title;
+		 width: 1px;
+		 height: 12px;
+		 left: 6px;
+	 }
+}
+.product-slide{
+	display: flex;
+	.slick-vertical .slick-slide{
+		height: 170px;
+	}
+	&__thumb{
+		width: 140px;
+		margin-right: 30px;
+		outline: none;
+	}
+	&__thumb-item{
+		width: 140px;
+		height: 140px;
+		margin-bottom: 30px;
+		img{
+			cursor: pointer;
+			width: 140px;
+			height: 140px;
+			object-fit: cover;
+		}
+	}
+	&__big{
+		width: 560px;
+		img{
+			width: 560px;
+			height: 650px;
+			object-fit: cover;
+		}
+	}
+}
+.product-info{
+	&__list{
+		margin-bottom: 30px;
+	}
+	&__item{
+		margin-bottom: 5px;
+		display: flex;
+	}
+	&__title{
+		min-width: 100px;
+		color: $title;
+	}
+	&__social{
+		path{
+			transition: all .3s; 
+			fill: $default;
+		}
+		& + &{
+			margin-left: 15px;
+		}
+		&:hover{
+			path{
+				fill: $accent;
+			}
+		}
+	}
+}
+.product-filter{
+	&__color{
+		margin-bottom: 25px;
+		&-label{
+			margin-right: 10px;
+		}
+		&-input{
+			@extend %radio-hidden;
+			&:checked{
+				& + .product-filter__color-checkbox{
+					border-color: $accent;
+				}
+			}
+		}
+	}
+	&__color-checkbox{
+		width: 24px;
+		height: 24px;
+		position: relative;
+		border: 1px solid #ccccce;
+		cursor: pointer;
+		display: inline-block;
+		span{
+			display: inline-block;
+			position: absolute;
+			width: 16px;
+			height: 16px;
+			top: 3px;
+			left: 3px;
+		}
+	}
+	&__color-title,
+	&__size-title{
+		margin-bottom: 5px;
+		font-size: 18px;
+		color: $title;
+		@extend %roboto-400;
+	}
+	&__size{
+		margin-bottom: 35px;
+		&-label{
+			margin-right: 10px;
+			display: inline-block;
+		}
+		&-input{
+			@extend %radio-hidden;
+			&:checked{
+				& + .product-filter__size-checkbox{
+					border-color: $accent;
+				}
+			}
+		}
+	}
+	&__size-checkbox{
+		padding: 4px 12px ;
+		border: 1px solid #ccccce;
+		display: inline-block;
+	}
+}
+.blog-box{
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+	&__author,
+	&__date{
+		padding-left: 30px;
+		position: relative;
+			&::before{
+		content: '';
+		position: absolute;
+		width: 20px;
+		height: 20px;
+		left: 0;
+		top: 4px;
+	}
+	}
+	&__author::before{
+		background-image: url('../images/icons/user-gray.svg');
+	}
+	&__date::before{
+		background-image: url('../images/icons/clock.svg');
+	}
+
+}
+.product-tabs{
+	padding-top: 110px;
+	&__top{
+		margin-bottom: 40px;
+		@extend %roboto-400;
+		font-size: 22px;
+		border-bottom: 1px solid #f0f0f0;	
+	}
+	&__top-item{
+		margin-bottom: 10px;
+		display: inline-block;
+		&+&{
+			margin-left: 55px;
+		}
+	}
+	&__top-item--active{
+		color: $title;
+		position: relative;
+		&::after{
+			content: '';
+			position: absolute;
+			bottom: -11px;
+			left: 0;
+			right: 0;
+			width: 100%;
+			height: 1px;
+			background-color: $accent;
+		}
+	}
+	&__content-item{
+		display: none;
+		&.product-tabs__content-item--active{
+			display: block;
+		}
+	}
+}
+
+.product {
+    padding: 105px 0 120px;
+    text-align: center;
+    &__items {
+       display: grid;
+       grid-template-columns: repeat(3, 1fr);
+       grid-gap: 45px 30px;
+    }
+    &__link {
+       text-transform: uppercase;
+       color: $title;
+       display: inline-block;
+       border: 1px solid $accent;
+       padding: 14px 27px;
+       margin-top: 55px;
+    }
+}
+ 
+.product-item {
+    max-width: 370px; 
+    text-align: center;
+    &.product-item--list  {
+       min-width: 100%;
+       display: flex;
+       text-align: left;
+       &:hover {
+           .product-item__link-box {
+              transform: translateY(-280%);
+            }
+       }
+       .product-item__img-box {
+          height: 250px;
+          min-width: 200px;
+          margin-bottom: 0;
+          img {
+            height: 250px;
+        }
+       }
+       .product-item__text {
+          margin-bottom: 25px;
+       }
+       .product-item__btn {
+          color: #fff;
+          padding: 11px 40px;
+          background-color: $title;
+          border: none;
+          &:hover {
+             background-color: $accent;
+             box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+             cursor: pointer;
+        }
+       }
+       .product-item__link-box {
+          background-color: transparent;
+          width: 115px;
+          box-shadow: none;           
+          bottom: auto;         
+          .product-item__link {
+             width: 50px;
+             height: 50px;
+             background-color: #fff;
+             border-radius: 50%;
+             display: flex;
+             justify-content: center;
+             align-items: center;
+          }
+          .product-item__link--line {
+             display: none;
+          }
+       }
+       .product-item__content-box {
+          display: block;
+       }
+       .product-item__title {
+          order: -1;
+          width: 100%;
+          padding: 0;
+          margin-bottom: 10px;
+       }
+       .product-item__price {
+          order: -1;
+          margin-left: -12px;
+       }
+       .star {
+          margin-left: 23px;
+       }
+       .product-item__box {
+          display: flex;
+          flex-wrap: wrap;
+       }
+       .product-item__wrapper-box {
+          padding: 30px 40px;
+          border: 1px solid #ececec;
+          border-left: none;
+       }
+    }
+    &__content-box {
+       display: none;
+    }
+    &__img-box {
+       position: relative;
+       height: 370px;
+       overflow: hidden; 
+       margin-bottom: 25px;     
+    }
+    &__link-box {
+       transition: all .3s;
+       position: absolute;
+       left: 0;
+       right: 0;
+       bottom: 50px;
+       background-color: #fff;
+       width: 220px;
+       height: 50px;
+       margin: 0 auto;
+       border-radius: 30px;
+       display: flex;
+       align-items: center;
+       justify-content: space-around;
+       transform: translateY(300%);
+    }
+    &__link--line::before,
+    &__link--line::after {
+       content: '';
+       position: absolute;
+       background-color: #ececec;
+       width: 1px;
+       height: 30px;
+       top: 10px;
+    }
+    &__link--line::before {
+       left: 70px;
+    }
+    &__link--line::after {
+       right: 70px;
+    }
+    &__link {
+       display: inherit;
+       path {
+          transition: all .3s;
+       }      
+    }
+    &__link:hover {
+       path {
+          fill: $accent;
+       }
+    }
+    &__images {
+       object-fit: cover;
+    }
+    &:hover {
+       .product-item__link-box {
+          transform: translateY(0);
+       }
+    }
+    &__title {
+       color: $title;
+       padding: 15px 0 20px;
+    }
+    &__price {
+       display: flex;
+       justify-content: center;
+       @extend %roboto-400;
+    }
+    &__new-price {
+       padding: 0 12px;
+       color: $title;
+    }
+    &__old-price {
+       padding: 0 12px;
+       text-decoration: line-through;
+    }
+    &--sale {
+       .product-item__img-box::before {
+          content: "SALE";
+          @extend %btn;
+          position: absolute;
+          top: 25px;
+          left: 25px;
+          line-height: 8px;
+       }
+    }
+}
