--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1068,6 +1068,7 @@
 }
 }
 .product-page{
+  border-bottom: 1px solid #f0f0f0;
 	padding: 120px 0 0px;
 	.product-one{
 		&__inner{
@@ -1136,17 +1137,19 @@
 	 box-shadow: none;
 	 transform: translateY(1px);
 	 width: 114px;
+   box-shadow: none;
 }
 .jq-number__field input {
-    border: none;
-    outline: none;
-    background: none;
-	 @extend %quicksand-500;
-	 text-align: center;
-	 color: $title;
-	 height: 50px;
-	 width: 100%;
-}
+  width: 100%;
+  height: 50px;
+  padding: 8px 9px;
+  border: none;
+  outline: none;
+  background: none;
+  @extend %quicksand-500;
+  text-align: center;
+  color: $title;
+  }
 .jq-number{
 	padding: 0;
 	position: relative;
@@ -1229,7 +1232,7 @@
 		min-width: 100px;
 		color: $title;
 	}
-	&__social{
+	&__link{
 		path{
 			transition: all .3s; 
 			fill: $default;
@@ -1546,5 +1549,9 @@
           left: 25px;
           line-height: 8px;
        }
+    }
+    &__inner {
+      display: flex;
+      justify-content: space-between;
     }
 }
