product and blog

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -614,29 +614,17 @@
     margin: 30px 40px;
   }
   &-info {
-    display: flex;
-    justify-content: space-between;
+    
   }
   &-author {
-    position: relative;
-    padding-left:30px ;
+    
   } 
   &-date {
-    position: relative;
-  }
-  &-author::after {
-    content: url('../images/blog/admin.svg');
-    position: absolute;
-    left: 1px;
-    top: 2px;
+    
   }
   
-  &-date::after {
-    content: url('../images/blog/date.svg');
-    position: absolute;
-    left: -30px;
-    top: 2px;
-  }
+  
+  &-date
   &-link:hover {
     color: $accent;
     path {
@@ -644,6 +632,30 @@
     }
   }
 }
+
+.blog-box {
+  display: flex;
+  justify-content: space-between;
+  &__author {
+    position: relative;
+    padding-left:30px ;
+    &::after {
+      content: url('../images/blog/admin.svg');
+      position: absolute;
+      left: 1px;
+      top: 2px;
+    }
+  }
+  &__date {
+    position: relative;
+    &::after {
+    content: url('../images/blog/date.svg');
+    position: absolute;
+    left: 0;
+    top: 2px;
+    } 
+  }
+} 
  
 .top {
   &-container {
@@ -1068,7 +1080,7 @@
 }
 }
 .product-page{
-  border-bottom: 1px solid #f0f0f0;
+
 	padding: 120px 0 0px;
 	.product-one{
 		&__inner{
@@ -1327,7 +1339,7 @@
 		background-image: url('../images/icons/user-gray.svg');
 	}
 	&__date::before{
-		background-image: url('../images/icons/clock.svg');
+		background-image: url('../images/icons/clock.svg'); 
 	}
 
 }
@@ -1555,3 +1567,335 @@
       justify-content: space-between;
     }
 }
+
+.comments {
+  margin-bottom: 40px;
+  display: flex;
+  &__img {
+    height: 71px;
+    min-width: 71px;
+    margin-right: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+  &__content-top {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  &__content-name {
+    color: $title;
+    margin-right: 13px;
+    @extend %roboto-400;
+  }
+  &__content-date {
+    position: relative;
+    padding-left: 13px;
+    &::before {
+      content: '';
+      left: 0;
+      width: 1px;
+      height: 13px;
+      top: 7px;
+      position: absolute;
+      background-image: url(../images/icons/line.svg);
+    }
+    
+  }
+  &__content-star {
+    margin-left: auto;
+    margin-right: 0;
+  }
+  &__content-text {
+    margin-bottom: 10px;
+  } 
+  &__content-reply {
+    display: inline-block;
+    position: relative;
+    padding-left: 25px;
+    &::before {
+      content: '';
+      left: 0;
+      top: 7px;
+      width: 15px;
+      height: 13px;
+      background-image: url(../images/icons/reply.svg);
+    }
+  }
+}
+
+.comments-form {
+  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: 60px;
+  &__title {
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+    margin-bottom: 35px;
+    padding-bottom: 10px;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      height: 1px;
+      width: 50px;
+      color: $accent;
+      bottom: 0;
+      left: 0;
+    }
+  }
+  &__rating {
+    margin-bottom: 30px;
+  }
+  &__boxinput {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__text-input {
+  display: inline-block;
+    max-width: 570px;
+    height: 50px;
+    padding: 0 20px;
+    border: 1px solid #f0f0f0;
+  }
+  &__textarea {
+    border: 1px solid #f0f0f0;
+    padding: 15px 20px;
+    width: 100%;
+    display: block;
+    height: 225px;
+    resize: none;
+    margin-bottom: 40px;
+  }
+  &__btn {
+    bottom: none;
+    @extend %btn;
+  }
+  &__rating-title {
+    color: $title;
+    margin-right: 60px;
+  }
+  &__label {
+    margin-right: 25px;
+  }
+  &__input {
+    @extend %radio-hidden;
+    &:checked + .comments-form__radio  {
+      path {
+        fill: #ffc35d
+      }
+    }
+  }
+  &__radio {
+    cursor: pointer;
+    path {
+      fill: $default
+    }
+  }
+}
+
+.related {
+  padding: 50px 0 120px;
+    &__title {
+      margin-bottom: 50px;
+    }
+    &__items {
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      grid-column-gap: 30px;
+      .product-item__img-box {
+        height: auto;
+      }
+      .product-item__title {
+        padding: 5px 0;
+      }
+    }
+}
+
+.blog-page {
+  &__item--slider {
+    margin-top:-8px ;
+  }
+  padding: 120px 0 60px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__content {
+    width: 770px;
+    margin-right: 30px;
+  }
+  &__aside {
+    max-width: 370px
+  }
+  &__item-link {
+    display: block;
+    color: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+  }
+  &__item {
+    margin-bottom: 60px;
+    &.blog-page__item--no-image {
+      border-top: 1px solid #ececec;
+      box-shadow: 0px 20px 60px 0px rgba(202, 202, 202, 0.35);
+    }
+  }
+  &__img {
+    max-width: 770px;
+    height: 450px;
+    object-fit: cover;
+    display: block;
+  }
+  &__item-box {
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 40px;
+  }
+  &__item-title {
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-700;
+    line-height: 32px;
+    margin-bottom: 20px;
+    transition: all .3s;
+    &:hover {
+      color: $accent;
+    }
+  }
+  .blog-box {
+    justify-content: start;
+    &__author {
+      margin-right: 30px;
+    }
+  }
+  &__slider {
+    .slick-next,
+    .slick-prev {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 5;
+      width: 40px;
+      height: 40px;
+      background-color: $accent;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      outline: none;
+      box-shadow: 0px 7px 20px 0px rgba(254, 62, 87, 0.3);
+      cursor: pointer;
+      path {
+        fill: #fff;
+      }
+    }
+    .slick-disabled {
+      background-color: #fff;
+      box-shadow: 0px 7px 20px 0px rgba(168, 168, 168, 0.3);
+      path {
+        fill: $accent;
+      }
+    }
+    .slick-next {
+      right: 40px;
+    }
+    .slick-prev {
+      left: 40px;
+    }
+  }
+}
+
+.person {
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  text-align: center;
+  padding: 40px 25px;
+  &__img {
+    width: 160px;
+    height: 160px;
+    display: inline-block;
+    object-fit: cover;
+    margin: 0 auto 35px;
+  }
+  &__name {
+    color: $title;
+    font-size: 18px;
+    @extend %roboto-700;
+  }
+  &__position {
+    color: $accent;
+    margin-bottom: 25px;
+  }
+  &__text {
+    margin-bottom: 25px;
+  }
+  &__social-link {
+    margin: 0 8px;
+    path {
+      fill: $default;
+      transition: all .3s;
+    }
+    &:hover {
+      path {
+        fill: $accent;
+        transition: all .3s;
+      }
+    }
+  }
+}
+
+.latest-posts {
+  padding: 35px 30px 0px;
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  &__box-title {
+    color: $title;
+    font-size: 18px;
+    @extend %roboto-400;
+    margin-bottom: 5px;
+  }
+  &__item {
+    display: flex;
+    margin-bottom: 20px;
+    &+.latest-posts__item {
+      border-top: 1px solid #ececec;
+      padding-top: 20px;
+    }
+  }
+  &__link {
+    margin-right: 20px;
+    min-width: 80px;
+  }
+  &__img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover
+  }
+  &__title-link {
+    font-style: 18px;
+    @extend %roboto-400;
+    color: $title;
+    line-height: 28px;
+  }
+  &__date {
+    position: relative;
+    padding-left: 26px;
+    &::before {
+      position: absolute;
+      content: '';
+      width: 16px;
+      height: 16px;
+      top: 5px;
+      left: 0;
+      background-image: url('../images/icons/calendar.svg')
+    }
+  }
+}
+  
+  
+  
+  @import 'media';
