blog-one and contact

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1895,7 +1895,336 @@
     }
   }
 }
-  
-  
-  
+
+.blog-one {
+  &__text {
+
+    h4 {
+      @extend %roboto-700; 
+      color: $title;
+      font-size: 22px;
+      margin: 25px 0;
+    }
+    P {
+      margin: 25px 0;
+    }
+    blockquote {
+      @extend %roboto-400; 
+      color: $title;
+      font-size: 22px;
+      background-color: $bg;
+      border-left: 3px solid $accent;
+      margin: 25px 0;
+      padding: 35px;
+    }
+  }
+  &__left-img {
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 10px;
+  }
+  &__right-img {
+    float: right;
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+  &__text {
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 30px;
+    margin-top: -1px;
+  }
+  &__info {
+    display: flex;
+    margin-bottom: 25px;
+    &-link {
+      @extend %quicksand-400;
+      margin-right: 30px;
+      padding-left: 28px;
+      position: relative;
+      top: 0;
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 16px;
+        height: 16px;
+        top: 2px;
+        background-image: url(../images/icons/calendar.svg);
+      }
+    }
+  }
+  &__info-link--comment::before {
+    content: "";
+    background-image: url(../images/blog/comment.svg);
+  }
+  &__info-link--author::before {
+    content: "";
+    background-image: url(../images/blog/admin-red.svg);
+  }
+  &__content-inner{
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 25px 30px;
+    h2{
+      @extend %roboto-400;
+      font-size: 22px;
+      color: $title;
+      margin: 25px 0;
+    }
+    p{
+      margin: 25px 0;
+    }
+    blockquote{
+      background-color: $bg;
+      border-left: 3px solid $accent;
+      padding: 35px 35px 35px 40px;
+      @extend %roboto-400;
+      font-size: 22px;
+      line-height: 32px;
+      color: $title;
+      margin: 25px 0;
+    }
+    .blog-one__left{
+      float: left;
+      margin-right: 30px;
+    }
+    .blog-one__right{
+      float: right;
+      margin-left: 30px;
+    }
+  }
+  &__author{
+    padding-bottom: 40px;
+    border-bottom: 1px solid #ececec;
+  }
+  &__author-inner{
+    display: flex;
+  }
+  &__author-img{
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    margin-right: 30px;
+  }
+  &__author-name{
+    @extend %roboto-400;
+    color: $title;
+    font-size: 22px;
+    margin: 5px 0 25px;
+    text-transform: uppercase;
+  }
+  &__comments{
+    padding: 40px 0;
+    border-bottom: 1px solid #ececec;
+    margin-bottom: 40px;
+  }
+  &__comments-title{
+    @extend %roboto-700;
+    font-size: 24px;
+    color: $title;
+    margin-bottom: 25px;
+  }
+  &__comments-item{
+    display: flex;
+    margin-bottom: 25px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &__comments-img{
+    margin-right: 30px;
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+  }
+  &__comments-info{
+    display: flex;
+    margin-bottom: 10px;
+  }
+  &__comments-name{
+    @extend %roboto-400;
+    color: $title;
+    margin-right: 15px;
+  }
+  &__comments-date{
+    padding-left: 17px;
+    position: relative;
+    &::before{
+      content: "|";
+      position: absolute;
+      left: 0;
+    }
+  }
+  &__comments-reply{
+    padding-left: 26px;
+    position: relative;
+    &::before{
+      content: "";
+      position: absolute;
+      width: 15px;
+      height: 13px;
+      left: 0;
+      top: 7px;
+      background-image: url('../images/icons/reply.svg');
+    }
+  }
+  &__form-title{
+    @extend %roboto-700;
+    font-size: 24px;
+    color: $title;
+    margin-bottom: 25px;
+  }
+  &__form-box{
+    display: flex;
+    margin-bottom: 30px;
+  }
+  &__form-input{
+    outline: none;
+    height: 60px;
+    padding: 0 25px;
+    width: 100%;
+    border: 1px solid #ececec;
+    & + .blog-one__form-input{
+      margin-left: 30px;
+    }
+  }
+  &__form-textarea{
+    outline: none;
+    height: 220px;
+    width: 100%;
+    border: 1px solid #ececec;
+    padding: 25px;
+    margin-bottom: 30px;
+    resize: none;
+  }
+  &__form-btn{
+    @extend %btn;
+    cursor: pointer;
+  }
+}
+
+.tags-share{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 40px 30px;
+  line-height: 16px;
+  &__list{
+    display: flex;
+    align-items: center;
+    li + li{
+      margin-left: 15px;
+    }
+  }
+  &__title{
+    text-transform: uppercase;
+    color: $title;
+  }
+  &__list-link{
+    color: $default;
+    path{
+      fill: #727272;
+    }
+    &:hover{
+      color: $accent;
+      path{
+        fill: $accent;
+      }
+    }
+  }
+}
+
+#map{
+  width: 100%;
+  height: 450px;
+}
+
+.map{
+  padding: 120px 0;
+  &__inner{
+    display: flex;
+    margin-top: 120px;
+  }
+  &__content{
+    width: 370px;
+    margin-right: 30px;
+  }
+  &__title{
+    @extend %roboto-700;
+    font-size: 48px;
+    line-height: 58px;
+    color: $title;
+    margin-bottom: 15px;
+  }
+  &__text{
+    margin-bottom: 50px;
+  }
+  &__item{
+    display: flex;
+    margin-bottom: 40px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &__item-icon{
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+  }
+  &__item-content{
+    color: $title;
+    a{
+      color: inherit;
+      display: block;
+    }
+    span{
+      display: block;
+    }
+  }
+  &__form{
+    padding: 55px 40px 60px;
+    box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+  }
+  &__form-title{
+    @extend %roboto-700;
+    font-size: 22px;
+    color: $title;
+    margin-bottom: 25px;
+  }
+  &__form-box{
+    display: flex;
+    margin-bottom: 30px;
+  }
+  &__form-input{
+    border: none;
+    height: 60px;
+    width: 100%;
+    background-color: $bg;
+    padding: 0 25px;
+    & + .map__form-input{
+      margin-left: 30px;
+    }
+  }
+  &__form-textarea{
+    border: none;
+    margin: 30px 0;
+    width: 100%;
+    height: 200px;
+    background-color: $bg;
+    padding: 25px;
+    resize: none;
+  }
+  &__form-btn{
+    @extend %btn;
+    cursor: pointer;
+  }
+}
+
+
   @import 'media';
