--- a/app/contact.njk
+++ b/app/contact.njk
@@ -59,7 +59,7 @@
               </div>
             </div>
           </div>
-
+          <div class="map__former">   
           <form class="map__form" action="#">
             <h5 class="map__form-title">Contact Form</h5>
             <div class="map__form-box">
@@ -70,6 +70,7 @@
             <textarea class="map__form-textarea" placeholder="Message here"></textarea>
             <button class="map__form-btn" type="submit">SEND MESSAGE</button>
           </form>
+          </div>
         </div>
       </div>
     </section>
