--- a/app/module/_categories-info/_categories-info.scss
+++ b/app/module/_categories-info/_categories-info.scss
@@ -1,10 +1,8 @@
 .categories-info {
   padding: 120px 0;
-  // background-image: url(../images/categories/categories-left-bg.png);
   background-repeat: no-repeat;
   background-size: contain;
-  &__bg{
-    // background-image: url(../images/categories/categories-left-bg.png);
+  &__bg{ 
     background-repeat: no-repeat;
     background-size: contain;
   }
@@ -106,3 +104,102 @@
     margin-bottom: 55px;
    }
  }
+
+ @media(max-width:1235px) {
+   .info {
+     &::after {
+       right: 0;
+      }
+      &__item {
+        width: 340px;
+        padding: 20px 20px;
+      }
+    }
+  }
+  
+  @media(max-width:1100px) {
+    .categories {
+      &__items {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+      }
+      &__item {
+        background-position: center top;
+        &:nth-child(1) {
+          grid-row: auto;
+        }
+        &:nth-child(2) {
+          background-position: center right;
+          grid-column: auto;
+        }
+      }
+    }
+    .info {
+      display: block;
+      &__item {
+        width: 100%;
+        margin-bottom: 20px;
+        &-title {
+          margin: 20px 0 10px;
+        }
+      }
+    }
+  }
+  
+  @media(max-width:768px) {
+    .categories {
+      &__items {
+      min-height: 385px;
+    }
+    &__text {
+      max-width: 300px;
+    }
+    &__item {
+      background-image: none !important;
+      justify-content: center;
+      padding-left: 15px;
+    padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    &:nth-child(1) {
+      background-color: #f4dff0;
+    }
+    &:nth-child(2) {
+      background-color: #d7efef;
+    }
+    &:nth-child(3) {
+      background-color: #fff6a7;
+    }
+    &:nth-child(4) {
+      background-color: #ededed;
+    }
+  }
+}
+}
+
+@media(max-width:620px) {
+  .categories {
+    grid-gap: 10px;
+    &__items {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    &__item {
+      padding: 15px 10px;
+    }
+    &-info {
+      padding: 120px 0 60px;
+      &__item {
+        padding: 60px 15px;
+      }
+    }
+  }
+}
+  @media(max-width:375px) {
+  .info {
+    &item__title {
+      font-size: 20px;
+    }
+  }
+}
+
+
