--- a/app/module/_fashion/_fashion.scss
+++ b/app/module/_fashion/_fashion.scss
@@ -19,7 +19,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-
+    
   }
   &__info {
     min-width: 570px;
@@ -44,4 +44,58 @@
     margin-top: 60px;
     display: inline-block;
   }
- }
+}
+
+@media(max-width:1050px) {
+  .fashion {
+    &__inner {
+      display: block;
+    }
+    &__popup {
+      max-width: 100%;
+      background-position: center top;
+    }
+    &__content {
+      max-width: 100%;
+    }
+    &__title {
+      max-width: 350px;
+      text-align: center;
+      margin: 0 auto;
+    }
+    &__subtitle {
+      margin: 0 auto;
+      max-width: 350px;
+      text-align: center;
+    }
+    &__btn {
+      margin: 15px auto 0;
+      display: block;
+      max-width: 135px;
+    }
+    &__text {
+      margin: 0 auto;
+      max-width: 300px;
+      text-align: center;
+    }
+    &__video {
+      margin: 0 auto;
+    }
+  }
+}
+
+@media(max-width:620px) {
+  .fashion {
+    padding: 60px 0;
+    &__popup {
+      height: 270px;
+    }
+    &__subtitle {
+      padding-top: 40px;
+      font-size: 18px;
+    }
+    &__info {
+      min-width: auto;
+    }
+  }
+}
