--- a/app/module/_product/_product.scss
+++ b/app/module/_product/_product.scss
@@ -1,182 +1,329 @@
 
 .product {
-  padding: 105px 0 120px;
+  padding: 120px 0;
   text-align: center;
   &__items {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 45px 30px;
-    margin-top: 60px;
   }
   &__link {
-    text-transform: uppercase;
-    padding: 15px 25px;
-    border: 1px solid $accent;
-    @extend %roboto-400;
-    color: $title;
-    margin-top: 60px;
-    &-box {
-      display: flex;
-      justify-content: center;
-      
-    }
+    @extend %link
   }
   &__text {
-    text-align: center;
-    margin: 0 auto;
+    margin: 0 auto 10px;
   }
 }
+
 .product-item {
-  &:hover {
+  text-align: center;
+  max-width: 370px;
+  &.product-item--list {
+    min-width: 100%;
+    display: flex;
+    &:hover {
+      .product-item__link-box {
+        transform: translateY(-280%);
+      }
+    }
+    .product-item__img-box {
+      height: 250px;
+      min-width: 200px;
+      // width: 100%;
+      margin-bottom: 0;
+      img {
+        height: 250px;
+      }
+    }
     .product-item__link-box {
-      transform: translateY(0);
+      box-shadow: none;
+      width: 115px;
+      background-color: transparent;
+      bottom: auto;
+      .product-item__link {
+        width: 50px;
+        height: 50px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .product-item__link--line {
+        display: none;
+      }
+    }
+    .product-item__content-box {
+      display: block;
+    }
+    .product-item__box {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .product-item__title {
+      order: -1;
+      width: 100%;
+      padding: 0;
+      margin-bottom: 10px;
+    }
+    .product-item__price {
+      order: -1;
+      margin-left: -12px;
+    }
+    .product-item__text {
+      margin-bottom: 25px;
+    }
+    .star {
+      margin-left: 23px;
+    }
+    .product-item__btn {
+      @extend %btn;
+      padding: 11px 40px;
+      background-color: $title;
+      text-transform: none;
+      &:hover {
+        background-color: $accent;
+      }
+    }
+    .product-item__wrapper-box {
+      padding: 30px 40px;
+      border: 1px solid #ececec;
+      border-left: none;
+      text-align: left;
     }
   }
-  max-width: 370px;
-  text-align: center;
-  &__img-box{
+  &__content-box {
+    display: none;
+  }
+  &__img-box {
     position: relative;
     height: 370px;
     overflow: hidden;
-  }
-  &__title {
-    color: $title;
-    @extend %roboto-400;
-    font-size: 22px;
-    margin: 18px 0;
-  }
-  &__price {
-    display: flex;
-  justify-content: center;
-  }
-  &__new-price{
-    color: $title;
-    margin-right: 22px;
-    @extend %roboto-400;
-  }
-  &__old-price{
-    text-decoration: line-through;
+    margin-bottom: 25px;
   }
   &__link-box {
-    transition: all .3s;
+    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
     position: absolute;
-    bottom: 80px;
-    background-color: #fff;
     left: 0;
     right: 0;
-    display: inline-block;
+    bottom: 50px;
+    max-width: 212px;
     height: 50px;
-    width: 220px;
+    background-color: #fff;
     margin: 0 auto;
     border-radius: 22px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    position: relative;
     transform: translateY(300%);
+    transition: all .5s;
+  }
+  &__link {
+    display: inherit;
+    position: relative;
+    &:hover {
+      path {
+        fill: $accent;
+        transition: all .3s;
+      }
+    }
   }
   &__link--line::before,
   &__link--line::after {
     content: '';
     position: absolute;
-    border-left: 1px solid #ececec;
     height: 30px;
     width: 1px;
-    top: 10px;
+    background-color: #ececec;
+    top: -25%;
   }
   &__link--line::before {
-    left: 75px;
+    left: -150%
   }
-  &__link--line::after{
-    right: 75px;
+  &__link--line::after {
+    right: -150%;
   }
-  &__link{
-    display: inherit;
-    path {
-      transition: all .3s;
-    }
-  }
-  &__link:hover {
-    path {
-      fill: $accent;
-    }
-  }
-  &__img {
+  &__images {
     object-fit: cover;
+  }
+  &:hover {
+    .product-item__link-box {
+      transform: translateY(0);
+    }
+  }
+  &__title {
+    color: $title;
+    font-size: 22px;
+    padding: 15px 0 20px;
+  }
+  &__price {
+    display: flex;
+    justify-content: center;
+    @extend %roboto-400;
+    &-new {
+      @extend %roboto-700;
+      padding: 0 12px;
+      color: $title
+    }
+    &-old {
+      padding: 0 12px;
+      text-decoration: line-through;
+    }
   }
   &--sale {
     .product-item__img-box::before {
       content: 'SALE';
       @extend %btn;
       position: absolute;
-      top:25px;
+      top: 25px;
       left: 25px;
       line-height: 1;
     }
   }
 }
+
 .star {
-  margin: 30px auto 0;
+  margin: 0 auto;
 }
+
 .promo {
-  background-image: url(../images/promo/bg-img.jpg);
-  background-size: cover;
+  background-image: url('../images/promo/bg-img.jpg');
   background-repeat: no-repeat;
-  background-position: center center; 
+  background-size: cover;
+  background-position: center center;
   padding: 150px 0 160px;
-  height: 500px;
+  text-align: center;
   &__inner {
     max-width: 570px;
     width: 100%;
-    margin-left: auto ;
-  }
-  &__subtitle {
-    color: $accent;
-    text-align: center;
-    font-size: 22px;
-    @extend %quicksand-400;
-    margin-bottom: 26px;
+    margin-left: auto;
   }
   &__clock {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-top: 55px;
   }
   &__clock-item {
     width: 120px;
     height: 120px;
     border-radius: 50%;
     background-color: #fff;
+    box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    text-align: center;
     span {
-      color: $title;
       font-size: 48px;
       @extend %roboto-700;
-      margin-bottom: 10px;
+      color: $title;
+      margin: 10px 0 7px;
     }
   }
-
   &__link {
+    @extend %link;
+    line-height: 1;
+    padding: 20px 30px;
+  }
+  &__subtitle {
+    color: $accent;
     text-transform: uppercase;
-    color: $title;
-    padding: 15px 25px;
-    border: 1px solid $accent;
-    @extend %roboto-400;
-    &-box {
-      display: flex;
+    margin-bottom: 10px;
+    font-size: 22px;
+  }
+}
+.partners {
+  padding-top: 75px;
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 170px
+  }
+}
+
+@media(max-width:620px) {
+  .promo {
+    padding: 60px 0;
+    &__clock {
       justify-content: center;
-      margin-top: 55px;
+      flex-wrap: wrap;
+    }
+    &__clock-item {
+      margin: 20px 35px;
+    }
+  }
+  .partners {
+    padding: 60px 0;
+    &__list {
+      flex-wrap: wrap;
+      justify-content: center;
+      height: auto;
+    }
+    &__item {
+      margin: 10px 35px;
     }
   }
 }
 
-.partners {
-  margin: 75px 0 170px;
-  &__list{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+@media(max-width:1050px) {
+  .product-item {
+    &__img-box {
+      height: 305px;
+    }
+  }
+}
+
+@media(max-width:860px) {
+  .product {
+    &__items {
+      grid-gap: 30px;
+      grid-template-columns: repeat (2, 1fr);
+    }
+  }
+}
+
+@media(max-width:620px) {
+  .product {
+    padding: 60px 0;
+    &__items {
+      grid-gap: 30px;
+      grid-template-columns: repeat (1, 1fr);
+    }
+  }
+  .product-item {
+    max-width: 100%;
+    &__images {
+      widows: 100%;
+    }
+  }
+}
+
+@media(max-width:500px) {
+  .partners {
+    &__item {
+      margin: 10px 21px;
+    }
+  }
+}
+
+
+@media(max-width:450px) {
+  .promo {
+    &__clock {
+      margin-top: 30px;
+    }
+    &__clock-item {
+      margin: 8px;
+    }
+    &__link {
+      margin-top: 30px;
+    }
+  } 
+  .partners {
+    &__item {
+      margin: 10px 25px;
+    }
   }
 }
