--- a/app/scss/contact.scss
+++ b/app/scss/contact.scss
@@ -3,6 +3,7 @@
 @import 'reset';
 @import 'libs';
 @import 'global';
+@import 'media';
 @import '../module/_header/_header';
 @import '../module/_footer/_footer';
 @import '../module/_top/_top';
