--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,113 +6,6 @@
 
 
 
-
-.footer {
-    background-color: $bg;
-}
-.footer__top {
-  display: flex;
-  padding: 70px 0 40px;
-  border-bottom: 1px solid #ececec;
-  & h6 {
-    font-size: 22px;
-    line-height: 36px;
-    color: $title;
-}
-&-item {
-  line-height: 36px;
-}
-&-links__link{
-  color: $default;
-  font-size: 16px;
-  // line-height: 36px;
-  margin-bottom: 10px;
-  display: block;
-}
-&-logo {
-  margin-bottom: 46px;
-  display: block;
-}
-&-adress,
-&-email,
-&-phone {
-  display: block;
-  margin-bottom: 10px;
-}
-&-social {
-  display: flex;
-  margin-top: 30px;
-  align-items: center;
-}
-&-social__item + .footer__top-social__item {
-  padding-left: 18px;
-}
-&-social__link {
-  transition: all .3s;
-  path{
-    fill:$default;
-  }
-  &:hover{
-    path {
-      fill: $accent;
-    }
-  } 
-}
-&-contact {
-  max-width: 236px;
-  margin-right: 64px;
-}
-&-nav {
-  max-width: 144px;
-  margin-right: 57px;
-}
-&-acc {
-  max-width: 125px;
-  margin-right: 75px;
-}
-&-account__item {
-  margin-bottom: 10px;
-  display: block;
-}
-&-subscribe {
-  max-width: 470px;
-  line-height: 26px;
-}
-&-title {
-  margin-bottom: 40px;
-}
-&-form {
-  margin-top: 28px;
-}
-&-form__input{
-  background-color: #fff;
-  max-width: 320px;
-  border: none;
-  width: 100%;
-  padding: 15px;
-  box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
-  &::placeholder {
-    color: $default;
-    font-size: 16px;
-  }
-}
-&-form__btn{
-@extend %btn
-}
-}
-
-.footer__bottom {
-  display: flex;
-  height: 75px;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 12px;
-  &-accept__img {
-    margin-left: 25px;
-    display: inline;
-    vertical-align: middle;
-  }
-}
  
  
  
@@ -310,9 +203,11 @@
 	&__input{
 		@extend %checkbox-hidden;
 		&:checked + .filter-color__checkbox{
-			background-image: url('../images/icons/arrow-check-on.svg');
-			background-repeat: no-repeat;
-			background-position: center;
+			background-image: url('../images/icons/checkbox.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      border: 3px solid transparent;
 			height: 16px;
 			width: 16px;
 		}
@@ -347,8 +242,8 @@
 	&__input{
 		@extend %checkbox-hidden;
 		&:checked + .filter-size__checkbox{
-			background-image: url('../images/icons/checkmark.svg');
-			border: none;
+			background-image: url('../images/icons/check-size.svg');
+      border: none;
 			&+.filter-size__text{
 				color: $accent;
 			}
@@ -719,6 +614,7 @@
 		display: inline-block;
 	}
 }
+
 .blog-box{
 	display: flex;
 	justify-content: space-between;
@@ -727,20 +623,7 @@
 	&__date{
 		padding-left: 30px;
 		position: relative;
-			&::before{
-		content: '';
-		position: absolute;
-		width: 20px;
-		height: 20px;
-		left: 0;
-		top: 4px;
-	}
-	}
-	&__author::before{
-		background-image: url('../images/icons/user-gray.svg');
-	}
-	&__date::before{
-		background-image: url('../images/icons/clock.svg'); 
+	
 	}
 
 }
